fix: button whitespace nowrap

--- a/app/components/elements/button.css
+++ b/app/components/elements/button.css
@@ -15,6 +15,7 @@
     min-width: 0;
     padding: 0 calc(var(--spacing-button) / 2);
     border-radius: 2px;
+    white-space: nowrap;
     text-decoration: none;
     user-select: none;
 
